--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</style>
 			<section>
 				<h2>Topic title</h2>
-				<a href="#" class="can-i-use">Can I use it?</a>
+				<a href="#" target="_blank" class="can-i-use">Can I use it?</a>
 				<slot>Topic content slot</slot>
 				<div class="topic-references">
 					<h3>References</h3>
@@ -51,37 +51,24 @@
 				</section>
 
 				<topic-section topic-title="CSS @scope" can-i-use-href="https://caniuse.com/css-cascade-scope">
-					<p>CSS @scope</p>
+					<div class="q-and-a-card">
+						<p>
+							<strong class="question">Is this the way?</strong>
+						</p>
+						<p class="answer">
+							<i>This is the way</i>
+						</p>
+						<footer>
+							<p>We hope you are satisfied with the answer. Please rage on Reddit if not.</p>
+						</footer>
+					</div>
+					<p class="question">This paragraph also has the question class</p>
 					<ul slot="topic-references">
 						<li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@scope">MDN: @scope</a>
 						</li>
 					</ul>
 				</topic-section>
-
-				<div id="my-component-container"></div>
-				<script>
-					class MyComponent extends HTMLElement {
-						constructor() {
-							super();
-							this.attachShadow({ mode: 'open' });
-
-							fetch('src/components/my-component/my-component.html')
-								.then((response) => response.text())
-								.then((html) => {
-									this.shadowRoot.innerHTML = html;
-
-									const linkElem = document.createElement('link');
-									linkElem.setAttribute('rel', 'stylesheet');
-									linkElem.setAttribute('href', 'src/components/my-component/my-component.css');
-									this.shadowRoot.appendChild(linkElem);
-								});
-						}
-					}
-					customElements.define('my-component', MyComponent);
-
-					document.getElementById('my-component-container').innerHTML = '<my-component></my-component>';
-				</script>
 			</main>
 		</div>
 		<script type="module" src="/src/main.js"></script>
