Added popover js api example:

--- a/index.html
+++ b/index.html
@@ -92,12 +92,9 @@
 					<br />
 					<div id="scam">
 						<button id="scam-button">Receive 1 000 000 USD (not not a scam)</button>
-						<div id="scam-popover" class="popover">👹👹👹 Thank you, do come again! 👹👹👹</div>
+						<div id="scam-popover" popover class="popover">👹👹👹 Thank you, do come again! 👹👹👹</div>
 					</div>
 					<ul slot="topic-references">
-						<li>
-							<a href="https://web.dev/blog/popover-baseline?hl=en">web.dev: Popover API</a>
-						</li>
 						<li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Popover_API">MDN: Popover API</a>
 						</li>
