added stuff to tldr section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 						</summary>
 						<ul>
 							<li>@scope</li>
+							<li>Popover API</li>
+							<li>Inert attribute</li>
 						</ul>
 					</details>
 				</section>
