Added initial letter demo:

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<li>@scope</li>
 							<li>Popover API</li>
 							<li>Inert attribute</li>
+							<li>Initial letter</li>
 						</ul>
 					</details>
 				</section>
@@ -104,6 +105,51 @@
 							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Popover_API/Using">
 								MDN: Using the Popover API
 							</a>
+						</li>
+					</ul>
+				</topic-section>
+				<topic-section topic-title="Initial letter" can-i-use-href="https://caniuse.com/css-initial-letter">
+					<article>
+						<p>
+							Let me tell you, <em>Office Space</em>&mdash;very, very tremendous movie, folks. I&rsquo;ve seen a lot of
+							movies about business, about the workplace, but nothing quite like this. Peter Gibbons, great guy, so
+							relatable, let me tell you. He works in one of these terrible corporate offices&mdash;total
+							disaster!&mdash;with cubicles everywhere, bad coffee, and this unbelievable boss, Bill Lumbergh, who just
+							wants those TPS reports. I know paperwork, nobody more than me, but these TPS reports are a total mess,
+							believe me.
+						</p>
+
+						<p>
+							Peter gets hypnotized&mdash;great move, very smart&mdash;and he stops caring about the ridiculous nonsense
+							at work. Suddenly, he&rsquo;s not working weekends, not listening to his lousy boss. Lot of people would
+							say, &quot;Peter, you&rsquo;re a genius.&quot; And I agree, I totally agree. He and his friends, great
+							team&mdash;Michael Bolton (not the singer, okay?), Samir&mdash;they cook up a plan to stick it to the
+							company, just like a lot of us always wanted to. It&rsquo;s truly fantastic.
+						</p>
+
+						<p>
+							<span>There&rsquo;s even a guy named Milton, absolutely hilarious.</span>
+							He just wants his stapler, folks, just a simple stapler. But the big bosses, they don&rsquo;t care, no
+							respect for the little guy&mdash;which is exactly what&rsquo;s wrong with so many companies in America,
+							trust me.
+						</p>
+
+						<p>
+							At the end, a fire clears it all out&mdash;total clean slate. Very dramatic. The movie&rsquo;s about
+							standing up to terrible management, doing what you want, and living the American dream. And nobody loves
+							the American dream more than me. Believe me, <em>Office Space</em> is a classic. Everybody loves it,
+							everybody&rsquo;s talking about it. Tremendous film.
+						</p>
+					</article>
+					<ul slot="topic-references">
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/initial-letter">MDN: Initial letter</a>
+						</li>
+						<li>
+							<a href="https://css-tricks.com/almanac/properties/i/initial-letter">CSS Tricks: Initial letter</a>
+						</li>
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::first-letter">MDN: ::first-letter</a>
 						</li>
 					</ul>
 				</topic-section>
