Added topic section for custom text highlight

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 							<li>Popover API</li>
 							<li>Inert attribute</li>
 							<li>Initial letter</li>
+							<li>Custom text highlight</li>
 						</ul>
 					</details>
 				</section>
@@ -150,6 +151,24 @@
 						</li>
 						<li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::first-letter">MDN: ::first-letter</a>
+						</li>
+					</ul>
+				</topic-section>
+				<topic-section topic-title="Custom text highligts" can-i-use-href="https://caniuse.com/?search=%3A%3Ahighlight">
+					<p>custom text highlight</p>
+					<ul slot="topic-references">
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">
+								MDN: CSS Custom Highlight API
+							</a>
+						</li>
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::highlight">MDN: ::highlight()</a>
+						</li>
+						<li>
+							<a href="https://frontendmasters.com/blog/using-the-custom-highlight-api/">
+								Frontend Masters: Using the Custom Highlight API
+							</a>
 						</li>
 					</ul>
 				</topic-section>
