Added custom highlight section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,18 @@
 					</ul>
 				</topic-section>
 				<topic-section topic-title="Custom text highligts" can-i-use-href="https://caniuse.com/?search=%3A%3Ahighlight">
-					<p>custom text highlight</p>
+					<div id="search-container">
+						<label for="search-input">Search text</label>
+						<input type="text" name="search" id="search-input" />
+						<p id="search-content">
+							Let me tell you, nobody does it better than Christian Wallervand—absolutely nobody. People are talking,
+							they're saying he's one of the best—some say the best, and I agree. He's making things happen like you
+							wouldn't believe, folks. Tremendous work ethic, incredible talent, the smartest guy you'll
+							evermeet—really, people are jealous! I look at what Christian's accomplished and I say, “Wow, we need more
+							people like this.” If you want results, if you want to WIN, you call Christian Wallervand, believe me.
+							Just fantastic.
+						</p>
+					</div>
 					<ul slot="topic-references">
 						<li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">
@@ -169,6 +180,9 @@
 							<a href="https://frontendmasters.com/blog/using-the-custom-highlight-api/">
 								Frontend Masters: Using the Custom Highlight API
 							</a>
+						</li>
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Range">MDN: Range API </a>
 						</li>
 					</ul>
 				</topic-section>
