Change demo for @scope

--- a/index.html
+++ b/index.html
@@ -53,26 +53,6 @@
 						</ul>
 					</details>
 				</section>
-
-				<topic-section topic-title="CSS @scope" can-i-use-href="https://caniuse.com/css-cascade-scope">
-					<div class="q-and-a-card">
-						<p>
-							<strong class="question">Is this the way?</strong>
-						</p>
-						<p class="answer">
-							<i>This is the way</i>
-						</p>
-						<footer>
-							<p>We hope you are satisfied with the answer. Please rage on Reddit if not.</p>
-						</footer>
-					</div>
-					<p class="question">This paragraph also has the question class</p>
-					<ul slot="topic-references">
-						<li>
-							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@scope">MDN: @scope</a>
-						</li>
-					</ul>
-				</topic-section>
 				<topic-section topic-title="Popover API" can-i-use-href="https://caniuse.com/?search=popover">
 					<p>
 						A popover is a small overlay that appears on top of the main content, typically used to display additional
@@ -183,6 +163,37 @@
 						</li>
 						<li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Range">MDN: Range API </a>
+						</li>
+					</ul>
+				</topic-section>
+				<topic-section topic-title="CSS @scope" can-i-use-href="https://caniuse.com/css-cascade-scope">
+					<div class="q-and-a-card">
+						<p class="question">Is this the way?</p>
+						<p class="answer">
+							Well, that depends on what 'this' is and which way you're going. But generally speaking, the Mandalorian
+							has it figured out...
+							<img src="/this_is_the_way.jpg" alt="This is the way" />
+						</p>
+					</div>
+					<br />
+					<div class="q-and-a-card dark">
+						<p class="question">Is this it?</p>
+						<p class="answer">No, there will be more!</p>
+					</div>
+					<br />
+					<div class="q-and-a-card fresh">
+						<p class="question">How do I properly wash my hands?</p>
+						<p class="answer">
+							<figure>
+								<img src="/this_is_the_way_comic.jpg" alt="This is the way we wash our hands" />
+								<figcaption>A poor joke</figcaption>
+							</figure>
+						</p>
+					</div>
+					<p class="question">This paragraph also has the question class</p>
+					<ul slot="topic-references">
+						<li>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@scope">MDN: @scope</a>
 						</li>
 					</ul>
 				</topic-section>
