Changed id of tldr

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			</header>
 			<main>
 				<section>
-					<details id="tldr">
+					<details id="agenda">
 						<summary>
-							<h2>TLDR;</h2>
+							<h2>On the menu</h2>
 						</summary>
 						<ul>
 							<li>Popover API</li>
